[package]
name = "milla"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
atomic_float = "1.0.0"
bitflags = "2.5.0"
byondapi = { git = "https://github.com/spacestation13/byondapi-rs.git", version = "0.4.7" }
eyre = "0.6.12"
rand = { version = "0.8.5", features = ["small_rng"] }
scc = "2.1.1"
thread-priority = "1.1.0"
